[package]
name = "tlsn-test-tweet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.15", features = ["mozilla-certs"] }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.15" }

anyhow = "1.0"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros", "net", "io-std"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
